--- a/.arduino-ci.yml
+++ b/.arduino-ci.yml
@@ -15,14 +15,15 @@ packages:
 
 compile:
   # Choosing to run compilation tests on 2 different Arduino platforms
+  #  selected only those that work
   platforms:
     - uno
     # - due
     # - zero
     # - leonardo
-    - m4
+    # - m4
     - esp32
-    - esp8266
+    # - esp8266
     # - mega2560
     - rpipico
 
