--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=PERIPUMP
-version=0.1.0
+version=0.1.1
 author=Rob Tillaart <rob.tillaart@gmail.com>
 maintainer=Rob Tillaart <rob.tillaart@gmail.com>
 sentence=Arduino library for peristaltic pump DFR0523 and compatibles.
 paragraph=
-category=Motors
+category=Device Control
 url=https://github.com/RobTillaart/PERIPUMP.git
 architectures=*
 includes=PERIPUMP.h
